--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 authors = ["Damian Peckett <damian@pecke.tt>"]
-edition = "2018"
+edition = "2021"
 name = "openpsg"
 version = "0.1.0"
 
@@ -10,27 +10,27 @@ cortex-m-rt = "0.7.0"
 defmt = "0.3"
 defmt-rtt = "0.4"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
-embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f746zg", "memory-x", "unstable-pac", "time-driver-any", "exti"]  }
+embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f746zg", "unstable-pac", "time-driver-any", "exti"]  }
 embassy-sync = { version = "0.6.1", features = ["defmt"] }
 embassy-executor = { version = "0.6.3", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
 embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
-embassy-net = { version = "0.4.0", features = ["defmt", "medium-ethernet", "proto-ipv4", "tcp", "udp", "dhcpv4", "dhcpv4-hostname"] }
+embassy-net = { version = "0.5.0", features = ["defmt", "medium-ethernet", "proto-ipv4", "tcp", "udp", "dhcpv4"] }
 embedded-io-async = { version = "0.6.1" }
 embassy-futures = { version = "0.1.1" }
 rand_core = "0.6.3"
 static_cell = "2"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde-json-core = "0.6.0"
-embedded-jsonrpc = { version = "0.3", default-features = false, features = ["defmt"] }
-adler = { version = "1.0.2",  default-features = false }
+embedded-jsonrpc = { path = "/home/damian/workspace/OpenPSG/embedded-jsonrpc", features = ["defmt"] }
+adler = { version = "1.0.2", default-features = false }
 heapless = { version = "0.8.0", features = ["serde"] }
+embedded-hal-async = "1.0.0"
+embedded-hal = "1.0.0"
+byteorder = {version = "1.5.0", default-features = false}
+sntpc = { git = "https://github.com/OpenPSG/sntpc.git", branch = "add-defmt-logging", default-features = false, features = ["defmt", "embassy-socket"] }
+rfc3339 = { version = "0.1.0", default-features = false }
 
 [[bin]]
 name = "openpsg"
 test = false
 bench = false
-
-[profile.release]
-codegen-units = 1
-debug = true
-lto = true
