--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
-runner = "probe-rs run --chip STM32F746ZGTx --protocol swd --speed 1800"
+runner = "probe-rs run --chip STM32F407VETx --protocol swd --connect-under-reset"
 
 [build]
 target = "thumbv7em-none-eabihf"
