--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,11 @@ cortex-m-rt = "0.7.0"
 defmt = "0.3"
 defmt-rtt = "0.4"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
-embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f407ve", "unstable-pac", "time-driver-any", "exti"]  }
-embassy-sync = { version = "0.6.1", features = ["defmt"] }
-embassy-executor = { version = "0.6.3", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
-embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
-embassy-net = { version = "0.5.0", features = ["defmt", "medium-ethernet", "proto-ipv4", "tcp", "udp", "dhcpv4"] }
+embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32f407ve", "unstable-pac", "time-driver-any", "exti"]  }
+embassy-sync = { version = "0.6.2", features = ["defmt"] }
+embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt"] }
+embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
+embassy-net = { version = "0.6.0", features = ["defmt", "medium-ethernet", "proto-ipv4", "tcp", "udp", "dhcpv4"] }
 embedded-io-async = { version = "0.6.1" }
 embassy-futures = { version = "0.1.1" }
 rand_core = "0.6.3"
@@ -27,9 +27,10 @@ heapless = { version = "0.8.0", features = ["defmt-03", "serde"] }
 embedded-hal-async = "1.0.0"
 embedded-hal = "1.0.0"
 byteorder = {version = "1.5.0", default-features = false}
-sntpc = { git = "https://github.com/OpenPSG/sntpc.git", branch = "add-defmt-logging", default-features = false, features = ["defmt", "embassy-socket"] }
+sntpc = { version = "0.5.2", default-features = false, features = ["defmt", "embassy-socket"] }
 rfc3339 = { version = "0.1.0", default-features = false }
-chrono = { version = "^0.4", default-features = false}
+chrono = { version = "0.4", default-features = false}
+num-traits = { version = "0.2.19", default-features = false }
 
 [[bin]]
 name = "openpsg"
